[package]
name = "reload"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version=  "4.4.6", features = ["derive"] }
globset = "0.4.13"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
